tests/NormalTests/paczka1/fuzzy1/76134141.err
Error in line 27: Si1jb5y8 A862 89,5
Error in line 25: LH1xeUCzTW1 A313 93,8
Error in line 37: A151 A151 84,8
